undo css background fix that was worse than using a div on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,12 @@ body{
     margin: 0px;
     padding: 0px;
     overflow: hidden;
-    background-image: url('../assets/Ben_and_Sarah.jpg');
+    background-image: url('../assets/Ben_and_Sarah_alpha.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    opacity: 0.4;
-    filter:alpha(opacity=40);
+    background-position: center bottom;
+    /*opacity: 0.5;*/
+    /*filter:alpha(opacity=40);*/
     z-index: -100;
 }
 
